--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Nimpas</string>
+    <string name="group">Group</string>
+    <string name="password">Password</string>
+    <string name="card">Credit card</string>
+    <string name="note">Note</string>
 </resources>
