--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="enter_keyword">Enter a master keyword</string>
     <string name="unlock">Unlock</string>
     <string name="create">Create</string>
+    <string name="info">Info</string>
 </resources>
