--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="unlock">Unlock</string>
     <string name="create">Create</string>
     <string name="info">Info</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
