--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="add_user">Add User</string>
     <string name="book_title">User Name</string>
     <string name="enter_book_title">Enter user name</string>
+    <string name="select_user">Select User</string>
 </resources>
