Rename user add/list screens and components to book add/list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
     <string name="add_user">Add User</string>
     <string name="book_title">User Name</string>
     <string name="enter_book_title">Enter user name</string>
-    <string name="select_user">Select User</string>
+    <string name="select_book">Select User</string>
     <string name="date_updated">Updated at %s</string>
 </resources>
