Add book export menu on safe screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="enter_book_title">Enter user name</string>
     <string name="select_book">Select User</string>
     <string name="date_updated">Updated at %s</string>
+    <string name="export">Export book</string>
 </resources>
