--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="export_subject">%s Book</string>
     <string name="export_text">Download Nimpas at Google Play to use this encrypted book</string>
     <string name="import_book">Import User</string>
+    <string name="breadcrumb_root">Root</string>
 </resources>
